[package]
name = "kvvtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.x", features=["full"] }
serde = { version = "1.0.193", features=["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.23", features=["json"] }
colored = "2.1.0"

